# ATTACKS-SW

./: .gitignore  .gitmodules  README.md  build_and_run.sh  flight.md  running.md  script.py  setup.md  simulation.md
CR/: DataProcessingTradeWorstCaseV2.asv  DataProcessingTradeWorstCaseV2.m  Data_transmission_latency.m  dataProcessingTade.asv  dataProcessingTade.m
CVTesting/: CMakeLists.txt  main.cpp
CVTesting/blobDetection/: BlobDetection.cpp
ComputerVision/: CMakeLists.txt  README.md  build_and_run.sh  main.cpp
ComputerVision/BlobDetection/: BlobDetection.cpp  BlobDetection.h
ComputerVision/Scripts/: Scripts.cpp  Scripts.h
ComputerVision/benchmarking/: Benchmarking.cpp  Benchmarking.h
ComputerVision/benchmarking/data/: dataBasic.csv  dataVarying.csv  test.txt
ComputerVision/binaryImages/: test.txt
ComputerVision/blob/: Blob.cpp
ComputerVision/blobDetection/: BlobDetection.cpp  BlobDetection.h
ComputerVision/blobDetector/: BasicBlobDetector.cpp  BasicBlobDetector.h  BlobDetector.cpp  BlobDetector.h  DoGBlobDetector.h  VaryingLightBlobDetector.h
ComputerVision/blobDetector/src/: BasicBlobDetector.cpp  BlobDetector.cpp  DoGBlobDetector.cpp  VaryingLightBlobDetector.cpp
ComputerVision/images/: test.txt
ComputerVision/scripts/: Scripts.cpp  Scripts.h  benchmarkPlots.m  binaryImage.py
ComputerVision/videos/: test.txt
ComputerVision/visualizer/: Visualizer.cpp  Visualizer.h
Datasets/: README.md
Datasets/dataSet1/: rgv.json
MotionPlanning/: README.md
MotionPlanning/ros_ws/install/: local_setup.sh  setup.sh
MotionPlanning/ros_ws/log/: latest_build
MotionPlanning/ros_ws/src/computer_vision/: CMakeLists.txt  package.xml
MotionPlanning/ros_ws/src/ctrl_pkg/: CMakeLists.txt
MotionPlanning/ros_ws/src/gz_pkg/: CMakeLists.txt  package.xml
MotionPlanning/ros_ws/src/uas_common/: CMakeLists.txt  package.xml
MotionPlanning/ros_ws/src/uas_complete_misison/: CMakeLists.txt
MotionPlanning/ros_ws/src/uas_exploration/: CMakeLists.txt  package.xml
MotionPlanning/ros_ws/src/uas_exploration_mission/: package.xml
MotionPlanning/ros_ws/src/uas_lib/: CMakeLists.txt
MotionPlanning/ros_ws/src/uas_mission_control/: CMakeLists.txt  package.xml
MotionPlanning/ros_ws/src/uas_trailing/: CMakeLists.txt  package.xml
OpenCVDemo/: CMakeLists.txt  build_and_run.sh  main  main.cpp
OpenCVDemo/imageDemo/: ImageDemo.cpp
OpenCVDemo/include/: network.h
OpenCVDemo/torchDemo/: TorchDemo.cpp
OpenCVDemo/videoDemo/: VideoDemo.cpp
OpenCVDemo/webCamDemo/: WebCamDemo.cpp
OpenCVDemo/yoloDemo/: YoloDemo.cpp
Recordings/: README.md
UI/: UIros.py  UIsim.py
User-Interface/: UIros.py  UIsim.py
hitl_data/: test.txt
rithik_opencv_testing/: CMakeLists.txt  test.cpp
ros_ws/configurations/: CompleteMissionSchedulerConfig.yaml  CompleteTestMissionSchedulerConfig.yaml  HitlMissionSchedulerConfig.yaml  HoverMissionSchedulerConfig.yaml  TrailingMissionSchedulerConfig.yaml  TrailingTestMissionSchedulerConfig.yaml  WaypointMissionSchedulerConfig.yaml
ros_ws/install/: local_setup.sh  setup.sh
ros_ws/log/: latest_build
ros_ws/src/computer_vision/: CMakeLists.txt
ros_ws/src/computer_vision/src/: BlobDetector.cpp  VaryingLightBlobDetector.cpp
ros_ws/src/ctrl_pkg/launch/: UAS_sensor_listener.launch.py
ros_ws/src/gz_pkg/launch/: launch_sim.launch.py  rsp.launch.py
ros_ws/src/uas/: CMakeLists.txt  package.xml
ros_ws/src/uas/src/: UAS.cpp  UASState.cpp
ros_ws/src/uas_benchmarking/: CMakeLists.txt  package.xml
ros_ws/src/uas_benchmarking/src/: UASBenchmarking.cpp
ros_ws/src/uas_bringup/: CMakeLists.txt  package.xml
ros_ws/src/uas_bringup/launch/: uas_autonomous_test.launch.py  uas_camera1.launch.py  uas_camera_calibrate_mission.launch.py  uas_complete_mission.launch.py  uas_complete_test_mission.launch.py  uas_computer_vision_benchmarking.launch.py  uas_hitl_mission.launch.py  uas_hover_mission.launch.py  uas_trailing_mission.launch.py  uas_trailing_test_mission.launch.py  uas_waypoint_mission.launch.py
ros_ws/src/uas_cameras/: package.xml  setup.cfg  setup.py
ros_ws/src/uas_cameras/uas_cameras/: camera1_publisher.py
ros_ws/src/uas_complete_misison/: CMakeLists.txt
ros_ws/src/uas_complete_misison/src/: uas_complete_mission.cpp  uas_complete_mission.h
ros_ws/src/uas_computer_vision/: CMakeLists.txt  package.xml
ros_ws/src/uas_computer_vision/src/: BasicBlobDetector.cpp  Blob.cpp  BlobDetector.cpp  VaryingLightBlobDetector.cpp  Visualizer.cpp
ros_ws/src/uas_exploration_mission/: CMakeLists.txt
ros_ws/src/uas_exploration_mission/src/: uas_exploration_mission.h
ros_ws/src/uas_helpers/: CMakeLists.txt  package.xml
ros_ws/src/uas_helpers/include/uas_helpers/: Camera.h  RGV.h  RGVState.h
ros_ws/src/uas_helpers/src/: Camera.cpp  RGV.cpp  RGVState.cpp
ros_ws/src/uas_lib/: CMakeLists.txt  package.xml
ros_ws/src/uas_lib/src/: UASTrailingPhase.cpp  uas_mission.cpp
ros_ws/src/uas_msgs/: CMakeLists.txt  package.xml
ros_ws/src/uas_phases/: CMakeLists.txt  package.xml
ros_ws/src/uas_phases/src/: UASPhase.cpp  (+6 more)
ros_ws/src/uas_scheduler/: CMakeLists.txt  package.xml
ros_ws/src/uas_scheduler/include/uas_scheduler/: AutonomousTestScheduler.h  CameraCalibrateMissionScheduler.h  CompleteMissionScheduler.h  CompleteTestMissionScheduler.h  HitlMissionScheduler.h  HoverMissionScheduler.h  Scheduler.h  TrailingMissionScheduler.h  TrailingTestMissionScheduler.h  WaypointMissionScheduler.h
ros_ws/src/uas_scheduler/src/: AutonomousTestScheduler.cpp  CameraCalibrateMissionScheduler.cpp  CompleteMissionScheduler.cpp  CompleteTestMissionScheduler.cpp  HitlMissionScheduler.cpp  HoverMissionScheduler.cpp  Scheduler.cpp  TrailingMissionScheduler.cpp  TrailingTestMissionScheduler.cpp  WaypointMissionScheduler.cpp
scripts/: calibrate.py  camera_publisher.py  csv_splitter.py  data_transfer.py  ribbon_camera_record.py  ribbon_camera_show  ribbon_camera_show.py  ribbon_camera_start.py  separateFrames.py  test_camera_publisher.py  usb_camera_record  usb_camera_record.py  usb_camera_show.py  video_tranfer.py
zach_test/: CMakeLists.txt  test_main.cpp
(+3521 files in other folders)
