cmake_minimum_required(VERSION 3.10)
project(BlobDetectionPOC)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
find_package(OpenCV 4 REQUIRED)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/blobDetection)
add_executable(${PROJECT_NAME} main.cpp blobDetection/BlobDetection.cpp)
target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBS})
